--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ include_directories ("${PROJECT_SOURCE_DIR}/src")
 add_subdirectory (src)
 
 add_executable(AutoSCP main.cpp)
-target_link_libraries (AutoSCP src rsync)
+target_link_libraries (AutoSCP src rsync ssh)
