--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 include_directories ("${PROJECT_SOURCE_DIR}/src")
 add_subdirectory (src)
 
-add_executable(AutoSCP main.cpp fileutils.cpp fileutils.h)
-target_link_libraries (AutoSCP src rsync ssh ${Boost_LIBRARIES})
+add_executable(AutoSCP main.cpp src/fileutils.cpp src/fileutils.h)
+target_link_libraries (AutoSCP src rsync ssh ${Boost_LIBRARIES} boost_thread pthread)
 #LINK_DIRECTORIES()
