added ini parser

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,13 @@ FUNCTION(PREPEND var prefix)
     ENDFOREACH()
     SET(${var} "${listvar}" PARENT_SCOPE)
 ENDFUNCTION()
+SET(INIH_FILES
+  inih/ini.h
+  inih/ini.c
+  inih/INIReader.cpp
+  inih/INIReader.h
+)
+SOURCE_GROUP(INIH FILES ${INIH_FILES})
 
 SET(SRC_FILES fileutils.cpp fileutils.h filewatcher.cpp
         sshmanager.cpp sshmanager.h scpmanager.cpp scpmanager.h
@@ -15,5 +22,6 @@ ELSE()
 LIST(APPEND SRC_FILES filewatcherlinux.cpp filewatcherlinux.h)
 ENDIF()
 
+LIST(APPEND SRC_FILES ${INIH_FILES})
 PREPEND(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR} ${SRC_FILES})
 SET(SRC_FILES ${SRC_FILES} PARENT_SCOPE)
