--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
 
-FIND_PACKAGE(Boost COMPONENTS filesystem REQUIRED)
+FIND_PACKAGE(Boost COMPONENTS filesystem  REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
 include_directories ("${PROJECT_SOURCE_DIR}/src")
 add_subdirectory (src)
 
 add_executable(AutoSCP main.cpp ${SRC_FILES})
-target_link_libraries (AutoSCP ssh ${Boost_LIBRARIES} boost_thread)
+target_link_libraries (AutoSCP ssh ${Boost_LIBRARIES} boost_thread boost_program_options)
 #LINK_DIRECTORIES()
